# socket

./: .gitignore
socket_client/: CMakeLists.txt
socket_client/src/: SocketClient.cpp  SocketClient.h  main.cpp
socket_server/: CMakeLists.txt
socket_server/src/: SocketServer.cpp  SocketServer.h  main.cpp
